[gd_scene load_steps=12 format=2]

[ext_resource path="res://scenes/char_button.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/game_controller.gd" type="Script" id=2]
[ext_resource path="res://scripts/control_boxes.gd" type="Script" id=3]
[ext_resource path="res://sprites/time slider.png" type="Texture" id=4]
[ext_resource path="res://scripts/time.gd" type="Script" id=5]
[ext_resource path="res://fonts/hint font.tres" type="DynamicFont" id=6]
[ext_resource path="res://sprites/star_empty_glow.png" type="Texture" id=7]
[ext_resource path="res://sprites/star_filled_glow.png" type="Texture" id=8]

[sub_resource type="Animation" id=1]
resource_name = "StarFlickering"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 7 ), ExtResource( 8 ), ExtResource( 7 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "StarFlickering"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 7 ), ExtResource( 8 ), ExtResource( 7 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "StarFlickering"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 7 ), ExtResource( 8 ), ExtResource( 7 ) ]
}

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="Background color" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.454902, 0.741176, 0.796078, 1 )

[node name="Sel Char Boxes" type="Control" parent="."]
anchor_top = 0.65
anchor_right = 1.0
anchor_bottom = 0.875
script = ExtResource( 3 )
Type = "sel"

[node name="Char Button 1" parent="Sel Char Boxes" instance=ExtResource( 1 )]
anchor_left = 0.125
anchor_right = 0.275
anchor_bottom = 1.0

[node name="Char Button 2" parent="Sel Char Boxes" instance=ExtResource( 1 )]
anchor_left = 0.325
anchor_right = 0.475
anchor_bottom = 1.0

[node name="Char Button 3" parent="Sel Char Boxes" instance=ExtResource( 1 )]
anchor_left = 0.525
anchor_right = 0.675
anchor_bottom = 1.0

[node name="Char Button 4" parent="Sel Char Boxes" instance=ExtResource( 1 )]
anchor_left = 0.725
anchor_right = 0.875
anchor_bottom = 1.0

[node name="Word Char Boxes" type="Control" parent="."]
anchor_top = 0.175
anchor_right = 1.0
anchor_bottom = 0.4
script = ExtResource( 3 )
Type = "word"

[node name="Time" type="Control" parent="."]
anchor_top = 0.95
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )

[node name="Fill" type="TextureRect" parent="Time"]
modulate = Color( 0.937255, 0.905882, 0.737255, 1 )
anchor_bottom = 1.0
texture = ExtResource( 4 )
stretch_mode = 1

[node name="Middle Text Container" type="VBoxContainer" parent="."]
anchor_left = 0.025
anchor_top = 0.43
anchor_right = 0.975
anchor_bottom = 0.62
alignment = 1

[node name="Middle Text" type="RichTextLabel" parent="Middle Text Container"]
modulate = Color( 0.937255, 0.905882, 0.737255, 1 )
margin_top = 24.0
margin_right = 760.0
margin_bottom = 66.0
custom_fonts/normal_font = ExtResource( 6 )
bbcode_enabled = true
bbcode_text = "[center]"
fit_content_height = true
scroll_active = false

[node name="Quit Button" type="Button" parent="."]
margin_right = 54.0
margin_bottom = 29.0
text = "sulje"
flat = true

[node name="Stars" type="HBoxContainer" parent="."]
anchor_top = 0.02
anchor_right = 1.0
anchor_bottom = 0.12
alignment = 1

[node name="Star1" type="TextureRect" parent="Stars"]
margin_left = 328.0
margin_right = 373.0
margin_bottom = 48.0
rect_min_size = Vector2( 45, 0 )
texture = ExtResource( 7 )
expand = true
stretch_mode = 6

[node name="AnimationPlayer" type="AnimationPlayer" parent="Stars/Star1"]
anims/StarFlickering = SubResource( 1 )

[node name="Star2" type="TextureRect" parent="Stars"]
margin_left = 377.0
margin_right = 422.0
margin_bottom = 48.0
rect_min_size = Vector2( 45, 0 )
texture = ExtResource( 7 )
expand = true
stretch_mode = 6

[node name="AnimationPlayer" type="AnimationPlayer" parent="Stars/Star2"]
anims/StarFlickering = SubResource( 2 )

[node name="Star3" type="TextureRect" parent="Stars"]
margin_left = 426.0
margin_right = 471.0
margin_bottom = 48.0
rect_min_size = Vector2( 45, 0 )
texture = ExtResource( 7 )
expand = true
stretch_mode = 6

[node name="AnimationPlayer" type="AnimationPlayer" parent="Stars/Star3"]
anims/StarFlickering = SubResource( 3 )

[connection signal="answer_animation" from="." to="Word Char Boxes" method="_on_Control_answer_animation"]
[connection signal="change_time" from="." to="Time" method="_on_Control_change_time"]
[connection signal="char_chosen" from="." to="Word Char Boxes" method="_on_Control_char_chosen"]
[connection signal="chrs_created" from="." to="Sel Char Boxes" method="_on_Control_chrs_created"]
[connection signal="editing_char_selected" from="." to="Word Char Boxes" method="_on_Control_editing_char_selected"]
[connection signal="hide_boxes" from="." to="Sel Char Boxes" method="_on_Control_hide_boxes"]
[connection signal="hide_boxes" from="." to="Word Char Boxes" method="_on_Control_hide_boxes"]
[connection signal="send_gamecontroller" from="." to="Sel Char Boxes" method="_on_Control_send_gamecontroller"]
[connection signal="send_gamecontroller" from="." to="Word Char Boxes" method="_on_Control_send_gamecontroller"]
[connection signal="show_boxes" from="." to="Sel Char Boxes" method="_on_Control_show_boxes"]
[connection signal="show_boxes" from="." to="Word Char Boxes" method="_on_Control_show_boxes"]
[connection signal="word_created" from="." to="Word Char Boxes" method="_on_Control_word_created"]
[connection signal="pressed" from="Quit Button" to="." method="_on_Quit_Button_pressed"]
